--- a/creator-client/styles/globals.css
+++ b/creator-client/styles/globals.css
@@ -10,6 +10,12 @@ body {
   height: 100vh;
 }
 
+#__next {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 a {
   color: inherit;
   text-decoration: none;
