--- a/creator-client/styles/globals.css
+++ b/creator-client/styles/globals.css
@@ -1,13 +1,21 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
   background: linear-gradient(-45deg, #ee7752, #f47a9e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  height: 100vh;
+  max-height: 100vh;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
 }
 
 #__next {
@@ -22,6 +30,8 @@ a {
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
